Added Validations for MultiplexAdmins
Added Validations for MultiplexAdmins

--- a/react_node_backend/src/assets/css/style.css
+++ b/react_node_backend/src/assets/css/style.css
@@ -18,3 +18,11 @@
     width: 150px;
     margin-left: 110px;
 }
+
+.errormessage {
+    width: auto;
+}
+
+.form-control {
+    margin-top: 1em;
+}
