--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -604,3 +604,111 @@ input.sub {
 .page.registration.authentication-form {
   background-color: black !important;
 }
+
+.h1-seo{
+  line-height: 0px;
+}
+
+.header-links {
+  color: white !important;
+}
+
+.fan-btn-style-go{
+  vertical-align: unset;
+  margin-top: 8px;
+}
+
+.header-logo{
+  margin-top: -10px;
+}
+
+.movie-detail-header{
+  margin-top: 4.2%;
+  color: white !important;
+  font-size: 32px !important;
+  letter-spacing: 12px;
+}
+
+.media-player__placeholder:after{
+  margin-left: -100%;
+}
+
+.below-header-link{
+  font-size: 13px !important;
+}
+
+.release-date{
+  font-size: 15px;
+}
+
+.icon.icon-rottom-rotten {
+  width: 32px!important;
+  height: 32px !important;
+  background-position: center;
+}
+
+.message-title{
+  font-size: 20px !important;
+}
+
+.contact-info{
+  line-height: 18px !important;
+}
+
+.review-heading{
+  font-weight: bolder !important;
+}
+
+.checked {
+  color: 	#F94305;
+}
+
+.user-review-heading {
+  font-size: 18px !important;
+  font-weight: bolder;
+}
+
+.modal-dialog {
+  margin-top: 12% !important;
+}
+
+.write-review-form__heading{
+  font-size: 20px !important;
+}
+
+
+
+div.stars {
+  width: 270px;
+  display: inline-block;
+}
+
+input.star { display: none; }
+
+label.star {
+  float: right;
+  padding: 10px;
+  font-size: 36px;
+  color: #444;
+  transition: all .2s;
+}
+
+input.star:checked ~ label.star:before {
+  content: '\f005';
+  color: #FD4;
+  transition: all .25s;
+}
+
+input.star-5:checked ~ label.star:before {
+  color: #FE7;
+  text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked ~ label.star:before { color: #F62; }
+
+label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+label.star:before {
+  content: '\f006';
+  font-family: FontAwesome;
+}
