Adding Searching, pagination and clicks per page API

--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -1010,3 +1010,10 @@ div#search_bar {
   margin-top: -1%;
   width: 65%;
 }
+
+nav.pagination-list{
+  margin-left: 40% !important;
+}
+.pagination{
+  background-color: white !important;
+}
