#adding changes to admin dashboard

--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -1052,3 +1052,11 @@ button#footer-fanmail-submit {
 #keywords_error{
   margin-top: 8px !important;
 }
+
+.user-session-graph{
+  margin-left: -20% !important;
+}
+
+#admin-pages{
+  overflow: scroll !important;
+}
