--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -1060,3 +1060,20 @@ button#footer-fanmail-submit {
 #admin-pages{
   overflow: scroll !important;
 }
+
+.admin-graphs-div{
+  margin-left: -20%;
+}
+
+.right-div{
+  margin-top: 1%;
+}
+
+.trailer-head {
+  float: right;
+}
+
+.center-head{
+  margin-top: 5px;
+  font-size: 20px;
+}
