Adding final css for footer and home page

--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -1087,3 +1087,12 @@ button#footer-fanmail-submit {
   margin: auto;
   margin-top: 2%;
 }
+
+.center-align{
+  width: 100%
+}
+
+#img-link{
+  width: 580px !important;
+  height: 455px !important;
+}
