--- a/react_node_backend/src/assets/css/custom.css
+++ b/react_node_backend/src/assets/css/custom.css
@@ -1129,3 +1129,7 @@ button#footer-fanmail-submit {
   width: 20% !important;
   height: 20% !important;
 }
+
+li.fd-movie.show-box {
+  height: 192px !important;
+}
